--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 </div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
-
+    <img src="_117310488_16.jpg" alt="">
 </body>
 </html>
