--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 <h1>Hello world!</h1>
 <div>
     <img src="pexels-pixabay-268533.jpg" alt="Hello World from Space"
-    style="width:100%;max-width:960px">
+    style="width:100%;max-width: 640px">
 </div>
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works.</p>
+<div>
+    <img src="_117310488_16.jpg" alt="" style="width:100%;max-width:640px">
+</div>
 </body>
 </html>
