--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     style="width:100%;max-width: 640px">
 </div>
 <p>This is the first file in my new Git Repo.</p>
-<p>This line is here to show how merging works.</p>
+<p>This line is here to show how merging works.(hi im the edited line)</p>
 <div>
     <img src="_117310488_16.jpg" alt="" style="width:100%;max-width:640px">
 </div>
